syntax = "proto3";
package rrpc.test.v1;

option go_package = "pb_encoding/test";

import "google/protobuf/descriptor.proto";

message TestRequestBody {
	uint64 id = 1;
	string str = 2;
}

message TestResponseBody {
	uint64 id = 1;
	string str = 2;
}
